alignment fixes

--- a/menu-replica/css/style.css
+++ b/menu-replica/css/style.css
@@ -11,6 +11,7 @@ html{
     position: relative;
     background-color: white;
     margin: auto;
+    margin-top: 20px;
 }
 
 .sections{
@@ -74,13 +75,13 @@ html{
 #logo{
     top: 10px;
     left: 42px;
-    width: 139px;
+    width: 132px;
     height: auto;
     position: absolute;
 }
 
 #phone{
-    top: 135px;
+    top: 130px;
     right: 202px;
     width: 24px;
     height: auto;
@@ -88,7 +89,7 @@ html{
 }
 
 #insta{
-    top: 168px;
+    top: 166px;
     right: 204px;
     width: 20px;
     height: auto;
@@ -96,16 +97,16 @@ html{
 }
 
 #slices{
-    top: 214px;
-    left: 65px;
+    top: 213px;
+    left: 66px;
     width: 240px;
     height: auto;
     position: absolute;
 }
 
 #fresh{
-    top: 273px;
-    right:25px;
+    top: 270px;
+    right:28px;
     width: 101px;
     height: auto;
     position: absolute;
@@ -138,8 +139,7 @@ html{
 .button{
     width: fit-content;
     margin: auto;
-    position: relative;
-    margin-top: 40px;
+    margin-top: 20px;
     background-color: white;
     padding: 10px;
 }
@@ -200,8 +200,8 @@ html{
     font-size: 11px;
     text-align: center;
     width: 335px;
-    top: 44px;
-    left: 153px;
+    top: 40px;
+    left: 145px;
     position: absolute;
     line-height: 135%;
 }
@@ -209,21 +209,21 @@ html{
 .menu-title{
     font-size: 50px;
     top: 95px;
-    left: 48px;
+    left: 43px;
     position: absolute;
 }
 
 #num{
     font-size: 15px;
-    top: 109px;
-    left: 372px;
+    top: 105px;
+    left: 370px;
     position: absolute;
 }
 
 #ig{
     font-size: 15px;
-    top: 138px;
-    left: 375px;
+    top: 137px;
+    left: 376px;
     position: absolute;
 }
 
@@ -231,25 +231,25 @@ html{
     font-size: 48px;
     line-height: 0;
     position: absolute;
-    top: calc(125px + 13px);
-    left: 19px;
+    top: 141px;
+    left: 17px;
 }
 
 #awo{
     font-size: 12px;
     line-height: 0;
     position: absolute;
-    top: 169px;
-    left: 49px;
+    top: 171px;
+    left: 46px;
 }
 
 .pricing{
     font-size: 15px;
     position: absolute;
-    top: 190px;
-    left: 28px;
-    width: 205px;
-    line-height: 143%;
+    top: 185px;
+    left: 25px;
+    width: 208px;
+    line-height: 135%;
 }
 
 .blk-1{
@@ -279,31 +279,32 @@ html{
 }
 
 #column-2{
-    left: 247px;
-    top: 122px;
+    left: 241px;
+    top: 123px;
     position: absolute;
 }
 
 #vms{
     font-size: 22px;
+    line-height: 150%;
 }
 
 .pricing-2{
     font-size: 15px;
     position: absolute;
-    top: 190px;
+    top: 185px;
     left: 255px;
     width: 200px;
-    line-height: 140%;
+    line-height: 135%;
 }
 
 .pricing-3{
     font-size: 15px;
     position: absolute;
-    top: 191px;
+    top: 187px;
     left: 455px;
     width: 200px;
-    line-height: 153%;
+    line-height: 147%;
 }
 
 #sides{
@@ -380,5 +381,6 @@ html{
     height: auto;
     position: relative;
     margin: auto;
+    margin-top: 20px;
     display: block;
 }
